[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://person/Person.tscn" type="PackedScene" id=2]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Person" parent="." instance=ExtResource( 2 )]
collision_layer = 9
has_mask = false

[node name="AnimationTree" parent="Person" index="6"]
parameters/playback = SubResource( 1 )

[node name="InfectionTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="area_entered" from="Person/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Person/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="InfectionTimer" to="." method="_on_InfectionTimer_timeout"]

[editable path="Person"]
